package com.example.homework.Observer_pattern;

public interface Observer {
    void update(String productName, double newPrice);
}

